--- a/companyDetail.html
+++ b/companyDetail.html
@@ -1,185 +1,295 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>위탁사 채용 정보 | 아파트잡</title>
     <link rel="icon" href="/assets/img/favicon.png" type="image/x-icon" />
 
     <!-- bootstrap -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" />
     <!-- Font Awesome CDN (v6.5.2) -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-      integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoE8N6JY3m5z4R7Q0zj1T9juT7d4K5t1Q=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoE8N6JY3m5z4R7Q0zj1T9juT7d4K5t1Q=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./assets/css/global.css" />
     <link rel="stylesheet" href="./assets/css/subPage.css" />
     <link rel="stylesheet" href="./assets/css/head.css" />
-  </head>
-  <body>
+</head>
+
+<body>
     <!-- header -->
     <header id="headerWrap"></header>
 
-    <main class="company-page container my-5">
-      <!-- 회사 정보 -->
-      <section class="company-intro">
-        <div class="company-header d-flex justify-content-between align-items-center">
-          <div class="company-logo d-flex align-items-center">
-            <img src="./assets/img/brandBox_logo.png" alt="기업로고 이미지" class="me-3" />
-          </div>
-          <a href="#" target="_blank" class="text-decoration-non"><button type="button" class="btn btn-outline-primary company-link">
-            기업 홈페이지 바로가기
-          </button></a>
-        </div>
+    <main class="company-page container">
+        <!-- 회사 intro -->
+        <section class="recruit-header">
+            <div class="recruit-header__top">
+                <div class="recruit-company-name">
+                    서일개발
+                </div>
+                <a href="#" target="_blank" class="text-decoration-non"><button type="button"
+                        class="btn btn-outline-primary company-link">
+                        기업 홈페이지 바로가기
+                    </button></a>
+            </div>
+            <div class="recruit-header__banner my-3">
+                <img src="./assets/img/info_banner.jpg" class="img-fluid rounded" alt="위탁사 배너 이미지" />
+            </div>
+            <div class="recruit-header__tab">
+                <button class="tab-btn active" data-target="director">소장 채용</button>
+                <button class="tab-btn" data-target="all">전체 공고</button>
+                <button class="tab-btn" data-target="process">채용 절차</button>
+                <button class="tab-btn" data-target="company">기업 소개</button>
+                <button class="tab-btn" data-target="notice">기업 공지사항</button>
+            </div>
+        </section>
 
-        <div class="company-banner my-4">
-          <img src="./assets/img/company_banner.png" class="img-fluid rounded" alt="위탁사 배너 이미지" />
-        </div>
+        <!-- 소장채용 -->
+        <section id="director" class="general mt-5">
+            <h2>소장채용</h2>
+            <div class="director-card-list">
+                <!-- JS로 데이터 렌더링 -->
+            </div>
+        </section>
 
-        <p class="company-desc text-start">
-          넥스트플랜은 2012년 설립된 IT 솔루션 및 소프트웨어 개발 전문 기업으로,
-          “기술로 사람을 연결하고 더 나은 내일을 만든다”는 미션을 가지고
-          있습니다. 중소기업 맞춤형 아파트 관리 솔루션 개발로 시작해 국내
-          시장에서 신뢰를 쌓았으며, 앞으로 서림 주택관리 자체 플랫폼을 통한 통합
-          운영 관리에도 앞장서고 있습니다.
-          주요 서비스는 통합 스마트관리 플랫폼, 클라우드 솔루션, 데이터 분석 및
-          인텔리전스이며, 고객 요구를 반영한 효율적 시스템으로 입주민과 임직원의
-          만족도를 높입니다. 향후 인공지능 분석을 기반으로 한 스마트 단지 관리
-          기술과 사회적 책임을 동시에 실현하며, IT 리딩업체로 성장해 나갈
-          것입니다.
-        </p>
-      </section>
-
-      <!-- 전체 공고 -->
-       <section id="subPage" class="general mt-5">
+        <!-- 전체 공고 -->
+        <section id="all" class="general mt-5">
             <div class="job-list-header">
                 <h2>전체공고</h2>
                 <div class="sort-box">
                     <!-- 정렬 옵션 -->
                     <select id="sortOrder">
-                    <option value="latest" selected>최신순</option>
-                    <option value="salary">급여순</option>
-                    <option value="deadline">마감임박순</option>
+                        <option value="latest" selected>최신순</option>
+                        <option value="salary">급여순</option>
+                        <option value="deadline">마감임박순</option>
                     </select>
 
                     <!-- 페이지 개수 옵션 -->
                     <select id="pageSize">
-                    <option value="20" selected>20개씩</option>
-                    <option value="30">30개씩</option>
-                    <option value="40">40개씩</option>
-                    <option value="50">50개씩</option>
+                        <option value="20" selected>20개씩</option>
+                        <option value="30">30개씩</option>
+                        <option value="40">40개씩</option>
+                        <option value="50">50개씩</option>
                     </select>
                 </div>
             </div>
             <table class="job-table">
-            <thead>
-                <tr>
-                <th></th>
-                <th>공고제목</th>
-                <th>근무지역</th>
-                <th>직무</th>
-                <th>급여</th>
-                <th>단지명</th>
-                <th>단지규모</th>
-                <th>마감일</th>
-                <th></th>
-                </tr>
-            </thead>
-            <tbody id="jobTableBody">
-                <!-- JS로 데이터 렌더링 -->
-            </tbody>
+                <thead>
+                    <tr>
+                        <th></th>
+                        <th>공고제목</th>
+                        <th>근무지역</th>
+                        <th>직무</th>
+                        <th>급여</th>
+                        <th>단지명</th>
+                        <th>단지규모</th>
+                        <th>마감일</th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody id="jobTableBody">
+                    <!-- JS로 데이터 렌더링 -->
+                </tbody>
             </table>
 
-        <!-- 페이지네이션 -->
-        <nav aria-label="Page navigation example">
-            <ul class="pagination justify-content-center">
-                <li class="page-item">
-                <a class="page-link" href="#" aria-label="Previous">
-                    <span aria-hidden="true">&laquo;</span>
-                </a>
-                </li>
-                <li class="page-item"><a class="page-link" href="#">1</a></li>
-                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                <li class="page-item"><a class="page-link" href="#">4</a></li>
-                <li class="page-item"><a class="page-link" href="#">5</a></li>
-                <li class="page-item"><a class="page-link" href="#">6</a></li>
-                <li class="page-item"><a class="page-link" href="#">7</a></li>
-                <li class="page-item"><a class="page-link" href="#">8</a></li>
-                <li class="page-item"><a class="page-link" href="#">9</a></li>
-                <li class="page-item"><a class="page-link" href="#">10</a></li>
-                <li class="page-item">
-                <a class="page-link" href="#" aria-label="Next">
-                    <span aria-hidden="true">&raquo;</span>
-                </a>
-                </li>
-            </ul>
-        </nav>
-        </div>
+            <!-- 페이지네이션 -->
+            <nav aria-label="Page navigation example">
+                <ul class="pagination justify-content-center">
+                    <li class="page-item">
+                        <a class="page-link" href="#" aria-label="Previous">
+                            <span aria-hidden="true">&laquo;</span>
+                        </a>
+                    </li>
+                    <li class="page-item"><a class="page-link" href="#">1</a></li>
+                    <li class="page-item"><a class="page-link" href="#">2</a></li>
+                    <li class="page-item"><a class="page-link" href="#">3</a></li>
+                    <li class="page-item"><a class="page-link" href="#">4</a></li>
+                    <li class="page-item"><a class="page-link" href="#">5</a></li>
+                    <li class="page-item"><a class="page-link" href="#">6</a></li>
+                    <li class="page-item"><a class="page-link" href="#">7</a></li>
+                    <li class="page-item"><a class="page-link" href="#">8</a></li>
+                    <li class="page-item"><a class="page-link" href="#">9</a></li>
+                    <li class="page-item"><a class="page-link" href="#">10</a></li>
+                    <li class="page-item">
+                        <a class="page-link" href="#" aria-label="Next">
+                            <span aria-hidden="true">&raquo;</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+            </div>
+        </section>
+
+        <section id="process" class="general mt-5">
+            <h2>채용절차</h2>
+        </section>
+
+        <section id="company" class="general mt-5">
+            <h2>기업소개</h2>
+            <div class="company-banner my-4">
+                <img src="./assets/img/company_banner.png" class="img-fluid rounded" alt="위탁사 배너 이미지" />
+            </div>
+            <p class="company-desc text-start">
+                넥스트플랜은 2012년 설립된 IT 솔루션 및 소프트웨어 개발 전문 기업으로,
+                “기술로 사람을 연결하고 더 나은 내일을 만든다”는 미션을 가지고
+                있습니다. 중소기업 맞춤형 아파트 관리 솔루션 개발로 시작해 국내
+                시장에서 신뢰를 쌓았으며, 앞으로 서림 주택관리 자체 플랫폼을 통한 통합
+                운영 관리에도 앞장서고 있습니다.
+                주요 서비스는 통합 스마트관리 플랫폼, 클라우드 솔루션, 데이터 분석 및
+                인텔리전스이며, 고객 요구를 반영한 효율적 시스템으로 입주민과 임직원의
+                만족도를 높입니다. 향후 인공지능 분석을 기반으로 한 스마트 단지 관리
+                기술과 사회적 책임을 동시에 실현하며, IT 리딩업체로 성장해 나갈
+                것입니다.
+            </p>
+        </section>
+
+        <section id="notice" class="general mt-5">
+            <h2>기업 공지사항</h2>
+            <!-- 게시판 영역 -->
+            <div class="board-wrapper">
+                <table class="board-table">
+                    <colgroup>
+                        <col style="width:10%">
+                        <col style="width:65%">
+                        <col style="width:25%">
+                    </colgroup>
+                    <thead>
+                        <tr>
+                            <th>번호</th>
+                            <th>제목</th>
+                            <th>작성일</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr class="board-row" data-href="company-notice-view.html?id=3">
+                            <td>3</td>
+                            <td class="board-title">
+                                설 연휴 기간 고객센터 운영시간 안내
+                            </td>
+                            <td>2026-01-20</td>
+                        </tr>
+                        <tr class="board-row" data-href="company-notice-view.html?id=2">
+                            <td>2</td>
+                            <td class="board-title">
+                                급여 지급일 변경 관련 안내드립니다.
+                            </td>
+                            <td>2026-01-15</td>
+                        </tr>
+                        <tr class="board-row" data-href="company-notice-view.html?id=1">
+                            <td>1</td>
+                            <td class="board-title">
+                                기업 채용관 서비스 오픈 안내
+                            </td>
+                            <td>2026-01-10</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <!-- 기업공지 Pagination -->
+            <div id="noticePaging">
+                <nav aria-label="Page navigation example">
+                    <ul class="pagination justify-content-center">
+                        <li class="page-item">
+                            <a href="javascript:;" onclick="noticePageLoading(1)" class="page-link" aria-label="Previous">
+                                <span aria-hidden="true">«</span>
+                            </a>
+                        </li>
+                       <li class="page-item active">
+                            <a class="page-link" href="javascript:;" onclick="noticePageLoading(1)">1</a>
+                        </li>
+                       <li class="page-item">
+                            <a class="page-link" href="javascript:;" onclick="noticePageLoading(2)">2</a>
+                        </li>
+                        <li class="page-item">
+                            <a class="page-link" href="javascript:;" onclick="noticePageLoading(3)">3</a>
+                        </li>
+                        <li class="page-item">
+                            <a class="page-link" href="javascript:;" onclick="noticePageLoading(4)">4</a>
+                        </li>
+                        <li class="page-item">
+                            <a class="page-link" href="javascript:;" onclick="noticePageLoading(5)">5</a>
+                        </li>
+                        <li class="page-item">
+                            <a class="page-link" href="javascript:;" onclick="noticePageLoading(6)">6</a>
+                        </li>
+                        <li class="page-item">
+                            <a class="page-link" href="javascript:;" onclick="noticePageLoading(7)">7</a>
+                        </li>
+                        <li class="page-item">
+                            <a class="page-link" href="javascript:;" onclick="noticePageLoading(8)">8</a>
+                        </li>
+                        <li class="page-item">
+                            <a class="page-link" href="javascript:;" onclick="noticePageLoading(9)">9</a>
+                        </li>
+                        <li class="page-item">
+                            <a class="page-link" href="javascript:;" onclick="noticePageLoading(10)">10</a>
+                        </li>
+                        <!-- 다음 -->
+                        <li class="page-item">
+                            <a class="page-link" href="javascript:;" onclick="noticePageLoading(11)" aria-label="Next">
+                            <span aria-hidden="true">»</span>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
         </section>
     </main>
 
     <!-- footer -->
     <footer id="footer" class="site-footer"></footer>
 
-     <!-- Back to Top -->
+    <!-- Back to Top -->
     <button id="backToTop" class="back-to-top" aria-label="맨 위로 이동" title="맨 위로" type="button">
-      <!-- 단순한 화살표 아이콘 (SVG) -->
-      <svg width="20" height="20" viewBox="0 0 24 24"aria-hidden="true" focusable="false">
-        <path d="M12 4l-8 8h5v8h6v-8h5z"></path>
-      </svg>
+        <!-- 단순한 화살표 아이콘 (SVG) -->
+        <svg width="20" height="20" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+            <path d="M12 4l-8 8h5v8h6v-8h5z"></path>
+        </svg>
     </button>
 
     <script src="./assets/js/jobList.js"></script>
     <script src="./assets/js/login.js"></script>
+    <script src="./assets/js/scrollIntoView.js"></script>
+    <script src="./assets/js/director-recruit.js"></script>
+    <script src="./assets/js/company-notice.js"></script>
     <!-- bootstrap JS -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js"
-      integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js"
+        integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y"
+        crossorigin="anonymous"></script>
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
     <script>
-      (function () {
-        var a = document.querySelector("#headerWrap");
-        fetch("./assets/components/header.html")
-          .then((r) => r.text())
-          .then((d) => (a.innerHTML = d));
-      })();
-      fetch("./assets/components/footer.html")
-        .then((a) => a.text())
-        .then((b) => (document.querySelector("#footer").innerHTML = b));
-      document.addEventListener("DOMContentLoaded", () => {
-        var a = document.getElementById("backToTop");
-        if (!a) return;
-        window.addEventListener("scroll", () => {
-          window.scrollY > 300
-            ? a.classList.add("show")
-            : a.classList.remove("show");
-        }),
-          a.addEventListener("click", () => {
-            window.scrollTo({ top: 0, behavior: "smooth" });
-          });
-      });
+        (function () {
+            var a = document.querySelector("#headerWrap");
+            fetch("./assets/components/header.html")
+                .then((r) => r.text())
+                .then((d) => (a.innerHTML = d));
+        })();
+        fetch("./assets/components/footer.html")
+            .then((a) => a.text())
+            .then((b) => (document.querySelector("#footer").innerHTML = b));
+        document.addEventListener("DOMContentLoaded", () => {
+            var a = document.getElementById("backToTop");
+            if (!a) return;
+            window.addEventListener("scroll", () => {
+                window.scrollY > 300
+                    ? a.classList.add("show")
+                    : a.classList.remove("show");
+            }),
+                a.addEventListener("click", () => {
+                    window.scrollTo({ top: 0, behavior: "smooth" });
+                });
+        });
     </script>
-  </body>
+</body>
+
 </html>
