--- a/office_info_renew.html
+++ b/office_info_renew.html
@@ -122,10 +122,12 @@
             </div>
         </section>
 
+        <!-- 채용절차 -->
         <section id="process" class="general mt-5">
             <h2>채용절차</h2>
         </section>
 
+        <!-- 기업소개 -->
         <section id="company" class="general mt-5">
             <h2>기업소개</h2>
             <div class="company-banner my-4">
@@ -145,6 +147,7 @@
             </p>
         </section>
 
+        <!-- 기업공지사항 -->
         <section id="notice" class="general mt-5">
             <h2>기업 공지사항</h2>
             <!-- 게시판 영역 -->
