채용절차 height 추가

--- a/office_info_renew.html
+++ b/office_info_renew.html
@@ -125,6 +125,7 @@
         <!-- 채용절차 -->
         <section id="process" class="general mt-5">
             <h2>채용절차</h2>
+            <div style="height: 600px;"></div>
         </section>
 
         <!-- 기업소개 -->
