--- a/office_info_renew.html
+++ b/office_info_renew.html
@@ -125,7 +125,9 @@
         <!-- 채용절차 -->
         <section id="process" class="general mt-5">
             <h2>채용절차</h2>
-            <img src="./assets/img/recruitment_process_3.png" alt="" srcset="">
+            <div class="process-img">
+                <img src="./assets/img/recruitment_process_4.png">
+            </div>
         </section>
 
         <!-- 기업소개 -->
